# Modelo720

./: .gitignore  DEV_CONTAINER_GUIDE.md  DEV_CONTAINER_QUICKREF.md  Dockerfile.dev  GETTING_STARTED.md  MANIFEST.in  README.md  ROADMAP.md  docker-compose.dev.yml  example-rewritten.720  example.720  example.csv  main.py  pyproject.toml  quick-start.sh  requirements.txt  start-dev.sh  test_modelo720.py
.devcontainer/: devcontainer.json  setup-git.sh
Modelo720/: __init__.py  declaracion.py  modelo720.py  parser.py
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: declarations.py  health.py
backend/app/models/: declaration_models.py
backend/app/services/: declaration_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/components/: DeclarationViewer.vue  DetailView.vue  FileUploader.vue
frontend/src/router/: index.js
frontend/src/stores/: declaration.js
frontend/src/views/: Convert.vue  Home.vue  Parse.vue  ViewDeclaration.vue
tests/: __init__.py  test_declaration.py  test_models.py  test_nif_validation.py  test_parser.py
