[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelo720"
version = "0.1.0"
description = "A Python library for parsing and writing Spanish tax authority Modelo 720 declaration files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["modelo720", "spanish", "tax", "agencia tributaria", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/Modelo720"
Documentation = "https://github.com/yourusername/Modelo720#readme"
Repository = "https://github.com/yourusername/Modelo720"
Issues = "https://github.com/yourusername/Modelo720/issues"

[tool.setuptools]
packages = ["Modelo720"]

[tool.setuptools.package-data]
Modelo720 = ["py.typed"]
